--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -5,9 +5,8 @@
 <table>
   <thead>
     <tr>
-      <th>Name</th>
+       <th>Name</th>
       <th>Age</th>
-      <th colspan="3"></th>
     </tr>
   </thead>
 
@@ -16,9 +15,9 @@
       <tr>
         <td><%= student.name %></td>
         <td><%= student.age %></td>
-        <td><%= link_to 'Show', student %></td>
-        <td><%= link_to 'Edit', edit_student_path(student) %></td>
-        <td><%= link_to 'Destroy', student, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><button type="button" class="btn btn-primary btn-sm"><%= link_to 'Show', student %></button></td>
+        <td><button type="button" class="btn btn-info btn-sm"><%= link_to 'Edit', edit_student_path(student) %></button></td>
+        <td><button type="button" class="btn btn-danger btn-sm"><%= link_to 'Destroy', student, method: :delete, data: { confirm: 'Are you sure?' } %></button></td>
       </tr>
     <% end %>
   </tbody>
