Added mail field

--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -21,6 +21,11 @@
     <%= form.number_field :age %>
   </div>
 
+  <div class="field">
+    <%= form.label :mail %>
+    <%= form.text_field :mail %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
