--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -5,8 +5,9 @@
 <table>
   <thead>
     <tr>
-       <th>Name</th>
+      <th>Name </th>
       <th>Age</th>
+      <th>Mail</th>
     </tr>
   </thead>
 
@@ -15,6 +16,7 @@
       <tr>
         <td><%= student.name %></td>
         <td><%= student.age %></td>
+        <td><%= student.mail %></td>
         <td><button type="button" class="btn btn-primary btn-sm"><%= link_to 'Show', student %></button></td>
         <td><button type="button" class="btn btn-info btn-sm"><%= link_to 'Edit', edit_student_path(student) %></button></td>
         <td><button type="button" class="btn btn-danger btn-sm"><%= link_to 'Destroy', student, method: :delete, data: { confirm: 'Are you sure?' } %></button></td>
