--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -2,12 +2,15 @@
 
 <h1>Students</h1>
 
-<table>
+<table class="table table-hover">
   <thead>
-    <tr>
+    <tr class="table-primary">
       <th>Name </th>
       <th>Age</th>
       <th>Mail</th>
+      <th></th>
+      <th></th>
+      <th></th>
     </tr>
   </thead>
 
